--- a/pygamer/rtic-count-sequence/Cargo.toml
+++ b/pygamer/rtic-count-sequence/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 edition = "2021"
-name = "monotonic-stress"
+name = "rtic-count-sequence"
 version = "0.1.0"
 
 [dependencies]
-shared-pygamer = {path = "../../lib/shared-pygamer", features = ["rtic", "neopixels"]}
+shared-pygamer = {path = "../../lib/shared-pygamer", features = ["rtic"]}
 
 [features]
 clock1k = ["shared-pygamer/clock1k"]
 clock32k = ["shared-pygamer/clock32k"]
 debug = ["shared-pygamer/debug"]
-neopixels = []
 systick = ["shared-pygamer/systick"]
